bizinikiwi/pezframe/support/test/tests/pezpallet_ui/task_invalid_index.stderr
error: expected integer literal
  --> tests/pezpallet_ui/task_invalid_index.rs:31:27
   |
31 |         #[pezpallet::task_index("0")]
   |                                 ^^^
